# PC-Deck

./: .gitignore  README.md
.github/workflows/: build-release.yml
mobile-app/: app.json  babel.config.js  package.json  pnpm-lock.yaml  tsconfig.json
mobile-app/src/app/: _layout.tsx  add-tile.tsx  connect.tsx  deck-settings.tsx  deck.tsx  devices.tsx  editor.tsx  index.tsx  settings.tsx  spotify-callback.tsx
mobile-app/src/components/: Button.tsx  TextField.tsx
mobile-app/src/screens/: AddTileScreen.tsx  ConnectScreen.tsx  DeckScreen.tsx  DeckSettingsScreen.tsx  DevicesScreen.tsx  EditorScreen.tsx  SettingsScreen.tsx
mobile-app/src/stores/: connectionStore.ts  createMmkvStorage.ts  deckStore.ts  spotifyStore.ts
mobile-app/src/theme/: colors.ts  colorsDark.ts  context.tsx  paper.tsx  paperTheme.ts
pc-deck-app/: README.md  package.json
pc-deck-app/app/: _layout.tsx  connect.tsx  deck.tsx  editor.tsx  index.tsx  settings.tsx
pc-deck-app/src/components/: ActionConfigForm.tsx  ButtonEditor.tsx  ConnectionStatus.tsx  DeckButton.tsx  DeckGrid.tsx  EmptySlot.tsx
pc-deck-daemon/: Cargo.toml  README.md
pc-deck-daemon/src/: auth.rs  config.rs  error.rs  main.rs  models.rs
pc-deck-daemon/src/actions/: hotkey.rs  launch_app.rs  macro_action.rs  mod.rs  open_url.rs  registry.rs  shell_command.rs  slider.rs
pc-deck-daemon/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
pc-deck-daemon/src/routes/: actions.rs  apps.rs  decks.rs  health.rs  mod.rs  pair.rs  status.rs  widgets.rs  ws.rs
pc-deck-daemon/src/storage/: file_store.rs
(+40 files in other folders)
