[package]
name = "pc-deck-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tower-http = { version = "0.6", features = ["cors"] }
dirs = "5"
rand = "0.8"
url = "2"
webbrowser = "1"
enigo = "0.2"
whoami = "1"
futures-util = "0.3"
